added admin's Page and some more endpoint in academic_service
academic service has some new endpoints now, minor fixes in student ui and added all the admin pages version1